--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,10 +1,8 @@
 <h1>{{title}}</h1>
 
 <ul>
-    @for (user of users; track user.id) {
-        <li>
-            {{user.id}} - {{user.userName}}
-        </li>
-    }
-    
+  @for (user of users; track users.id) {
+    <li>{{user.id}} -  ({{user.userName}})</li>
+  }
+  
 </ul>
