End of section 5

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,8 +1,4 @@
-<h1>{{title}}</h1>
-
-<ul>
-  @for (user of users; track users.id) {
-    <li>{{user.id}} -  ({{user.userName}})</li>
-  }
-  
-</ul>
+<app-nav></app-nav>
+<div class="container mt-5">
+  <app-home></app-home>
+</div>
