--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,26 +1,27 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">Dating App</a>
+        <a class="navbar-brand" routerLink="/">Dating App</a>
 
-        
-        @if(AccountsService.CurrentUser()){
             <ul class="navbar-nav me-auto mb-2 mb-md-0" >
+                @if(AccountsService.CurrentUser()){
 
                 <li class="nav-item">
-                    <a class="nav-link">Matches</a>
+                    <a routerLink="/members"  routerLinkActive="active" class="nav-link">Matches</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Lists</a>
+                    <a routerLink="lists" routerLinkActive="active" class="nav-link">Lists</a>
                 </li>  
                 <li class="nav-item">
-                    <a class="nav-link">Messages</a>
+                    <a routerLink="messages" routerLinkActive="active" class="nav-link">Messages</a>
                 </li>
+            }
             </ul>
-    }
 
     @if(AccountsService.CurrentUser()){
         <div  dropdown class="dropdown" >
-            <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome user</a>
+            <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+                Welcome {{AccountsService.CurrentUser()?.username  | titlecase}}
+            </a>
             <div class="dropdown-menu" *dropdownMenu>
                 <a class="dropdown-item">Edit profile</a>
                 <div class="dropdown-divider"></div>
@@ -33,8 +34,7 @@
         <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex">
             <input name="Username" [(ngModel)] = "Model.username" class="form-control me-2" placeholder="Username" >
             <input name="password" [(ngModel)] = "Model.password" class="form-control me-2" placeholder="Password" type="password"  >
-            <button class="btn btn-outline-success" type="submit">Login</button>
+            <button class="btn btn-success" type="submit">Login</button>
         </form>
     }
-    </div>
-</nav>
+</div>
