--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -5,19 +5,22 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0" >
                 @if(AccountsService.CurrentUser()){
 
-                <li class="nav-item">
-                    <a routerLink="/members"  routerLinkActive="active" class="nav-link">Matches</a>
-                </li>
-                <li class="nav-item">
-                    <a routerLink="lists" routerLinkActive="active" class="nav-link">Lists</a>
-                </li>  
-                <li class="nav-item">
-                    <a routerLink="messages" routerLinkActive="active" class="nav-link">Messages</a>
-                </li>
-            }
+                    <li class="nav-item">
+                        <a routerLink="/members"  routerLinkActive="active" class="nav-link">Matches</a>
+                    </li>
+                    <li class="nav-item">
+                        <a routerLink="lists" routerLinkActive="active" class="nav-link">Lists</a>
+                    </li>  
+                    <li class="nav-item">
+                        <a routerLink="messages" routerLinkActive="active" class="nav-link">Messages</a>
+                    </li>
+                }@else {
+                    <li class="nav-item">
+                        <a routerLink="contact-us" routerLinkActive="active" class="nav-link">Contact us</a>
+                    </li>
+                }
             <li class="nav-item">
                 <a routerLink="errors" routerLinkActive="active" class="nav-link">errors</a>
-            </li>
             </ul>
 
     @if(AccountsService.CurrentUser()){
