End of section 11

--- a/Client/src/app/members/members-detail/members-detail.component.html
+++ b/Client/src/app/members/members-detail/members-detail.component.html
@@ -50,7 +50,8 @@
                     @if(photoTab.active) {
                         <gallery 
                             [items]="images" 
-                            [thumbs]="true" 
+                            [thumbs]="true"
+                            [itemAutosize]="true"
                             class="gallery">
                         </gallery>
                     }
