--- a/Client/src/app/members/member-edit/member-edit.component.html
+++ b/Client/src/app/members/member-edit/member-edit.component.html
@@ -89,7 +89,10 @@
                     
                 </tab>
                 <tab heading="Edit photos">
-                    photos edit will go here
+                    <app-photo-editor 
+                        [member]="member"
+                        (memberChange)="onMemberPhotoChange($event)">
+                    </app-photo-editor>
                 </tab>
             </tabset>
         </div>
