--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -27,7 +27,7 @@
         <div  dropdown class="dropdown" >
             <img src="{{AccountsService.CurrentUser()?.photoUrl || 'user.png'}}" class="me-2 border border-white" />
             <a  dropdownToggle class="dropdown-toggle text-light text-decoration-none">
-                Welcome {{AccountsService.CurrentUser()?.username  | titlecase}}
+                Welcome {{AccountsService.CurrentUser()?.knownAs}}
             </a>
             <div class="dropdown-menu" *dropdownMenu>
                 <a routerLink="member/edit" class="dropdown-item">Edit profile</a>
