--- a/Client/src/app/members/members-detail/members-detail.component.html
+++ b/Client/src/app/members/members-detail/members-detail.component.html
@@ -1,4 +1,4 @@
-@if (member) {
+
     <div class="row">
         <div class="col-4">
             <div class="card">
@@ -27,26 +27,26 @@
                 <div class="card-footer">
                     <div class="btn-group d-flex">
                         <button class="btn btn-primary">Like</button>
-                        <button class="btn btn-success">Messages</button>
+                        <button (click)="selectTab('Messages')" class="btn btn-success">Messages</button>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="col-8">
-            <tabset class="member-tabset">
-                <tab heading="About {{member.knownAs}}">
+            <tabset class="member-tabset" #memberTabs>
+                <tab heading="About {{member.knownAs}}" (selectTab)="onTabActivated($event)">
                     <h4>Description</h4>
                     <p>{{member.introduction}}</p>
                     <h4>Looking for</h4>
                     <p>{{member.lookingFor}}</p>
                 </tab>
-                <tab heading="Intrests">
+                <tab heading="Intrests" (selectTab)="onTabActivated($event)">
                     <h4>Interests</h4>
                     <p>{{member.interests}}</p>
                 </tab>
 
-                <tab heading="Photos" #photoTab = "tab">
+                <tab heading="Photos" #photoTab = "tab" (selectTab)="onTabActivated($event)">
                     @if(photoTab.active) {
                         <gallery 
                             [items]="images" 
@@ -58,10 +58,14 @@
 
                 </tab>
                 
-                <tab heading="Messages">
-                    <p>Messages will go here</p>
+                <tab heading="Messages" (selectTab)="onTabActivated($event)">
+                    <app-member-messages 
+                        [username]="member.username"
+                        [messages]="messages"
+                        (updateMessages)="updateMessages($event)"
+                        />
                 </tab>
             </tabset>
         </div>
     </div>
-}
+
