--- a/Client/src/app/members/member-card/member-card.component.html
+++ b/Client/src/app/members/member-card/member-card.component.html
@@ -3,9 +3,12 @@
         <img [src]="member().photoUrl || 'user.png'" alt="{{ member().knownAs }}" class="card-img-top" />
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
-                <a routerLink="/members/{{member().username}}" class="btn btn-primary">
+                <button 
+                    routerLink="/members/{{member().username}}" 
+                    (click)="visitMember()"
+                    class="btn btn-primary">
                     <i class="fa fa-user"></i>
-                </a>
+                </button>
             </li>
             <li class="list-inline-item">
                 <button (click)="toggleLike()" class="btn btn-primary"><i class="fa fa-heart"></i></button>
