--- a/Client/src/app/members/photo-editor/photo-editor.component.html
+++ b/Client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,18 +1,24 @@
-<div class="row">
+<div class="row mb-4">
     @for (photo of member().photos; track photo.id) {
-    <div class="col-2">
-        <img src="{{photo.url}}" alt="photo of user" class="img-thumbnail mb-1">
-        <div class="text-center">
+    <div class="col-2 img-wrapper position-relative mb-3">
+        <img src="{{photo.url}}" alt="photo of user" class="img-thumbnail mb-1" [class.NotApproved]="!photo.isApproved">
+        <div class="position-absolute top-50 start-50 translate-middle w-100 text-center" *ngIf="!photo.isApproved">
+            <span class="badge bg-danger bg-opacity-75 px-2 py-1 shadow-sm">
+                <i class="fa fa-clock-o me-1"></i> Pending proval
+            </span>
+        </div>
+       
+        <div class="text-center mt-1 d-flex justify-content-center">
             <button 
-                class="btn btn-sm mx-2"
-                [disabled]="photo.isMain"
+                class="btn btn-sm mx-1"
+                [disabled]="photo.isMain || !photo.isApproved"
                 (click)="setMainPhoto(photo)"
                 [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'">
-                Main</button>
-            <button class="btn btn-sm btn-danger"
+                <i class="fa fa-check-circle me-1"></i>Main</button>
+            <button class="btn btn-sm btn-outline-danger mx-1"
                 [disabled]="photo.isMain"
                 (click)="deletePhoto(photo)"
-            ><i class="fa fa-trash"></i></button>
+            ><i class="fa fa-trash"></i></button>a
         </div>
     </div>
     }
@@ -22,25 +28,25 @@
 
     <div class="col-md-3">
 
-        <h3>Add Photos</h3>
+        <h3 class="mb-3">Add Photos</h3>
 
         <div ng2FileDrop 
             [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" 
             (fileOver)="fileOverBase($event)"
             [uploader]="uploader" 
-            class="card bg-faded p-5 text-center my-drop-zone">
-            <i class="fa fa-upload fa-3x"></i>
-            Drop photos here
+            class="card bg-light p-5 text-center my-drop-zone shadow-sm hover-effect">
+            <i class="fa fa-upload fa-3x mb-2 text-primary"></i>
+            <p class="mb-0">Drop photos here</p>
         </div>
     </div>
 
     <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
 
-        <h3>Upload queue</h3>
-        <p>Queue length: {{ uploader?.queue?.length }}</p>
+        <h3 class="mb-3">Upload queue</h3>
+        <p>Queue length: <span class="badge bg-primary">{{ uploader?.queue?.length }}</span></p>
 
-        <table class="table">
-            <thead>
+        <table class="table table-striped">
+            <thead class="table-dark">
                 <tr>
                     <th width="50%">Name</th>
                     <th>Size</th>
@@ -56,29 +62,31 @@
         </table>
 
         <div>
-            <div>
+            <div class="mb-3">
                 Queue progress:
                 <div class="progress">
-                    <div class="progress-bar" 
+                    <div class="progress-bar bg-success" 
                         role="progressbar" 
                         [ngStyle]="{ 'width': uploader?.progress + '%' }"></div>
                 </div>
             </div>
-            <button type="button" class="btn btn-success btn-s" 
-                (click)="uploader?.uploadAll()"
-                [disabled]="!uploader?.getNotUploadedItems()?.length">
-                <span class="fa fa-upload"></span> Upload all
-            </button>
-            <button type="button" class="btn btn-warning btn-s" 
-                (click)="uploader?.cancelAll()"
-                [disabled]="!uploader?.isUploading">
-                <span class="fa fa-ban"></span> Cancel all
-            </button>
-            <button type="button" class="btn btn-danger btn-s" 
-                (click)="uploader?.clearQueue()"
-                [disabled]="!uploader?.queue?.length">
-                <span class="fa fa-trash"></span> Remove all
-            </button>
+            <div class="btn-group">
+                <button type="button" class="btn btn-success me-2" 
+                    (click)="uploader?.uploadAll()"
+                    [disabled]="!uploader?.getNotUploadedItems()?.length">
+                    <span class="fa fa-upload me-1"></span> Upload all
+                </button>
+                <button type="button" class="btn btn-warning me-2" 
+                    (click)="uploader?.cancelAll()"
+                    [disabled]="!uploader?.isUploading">
+                    <span class="fa fa-ban me-1"></span> Cancel all
+                </button>
+                <button type="button" class="btn btn-danger" 
+                    (click)="uploader?.clearQueue()"
+                    [disabled]="!uploader?.queue?.length">
+                    <span class="fa fa-trash me-1"></span> Remove all
+                </button>
+            </div>
         </div>
     </div>
 </div>
