--- a/Client/src/app/members/photo-editor/photo-editor.component.css
+++ b/Client/src/app/members/photo-editor/photo-editor.component.css
@@ -1,3 +1,35 @@
-.nv-file-over {
-    border: dotted 3px red;
+
+.photo-approval-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.photo-img.awaiting-approval {
+    filter: brightness(0.5) grayscale(0.2);
+    opacity: 0.7;
+}
+
+.approval-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,0.5);
+    display: flex;
+    opacity: 0.8;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+}
+
+.approval-text {
+    color: #d9534f;
+    font-size: 1.2rem;
+    text-align: center;
+    text-shadow: 0 1px 4px #fff, 0 0 2px #fff;
+    line-height: 1.2;
+    letter-spacing: 0.5px;
 }
