--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -16,9 +16,10 @@
                     </li>
                     <li class="nav-item" *appHasRole="['Admin', 'Moderator']">
                         <a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a>
-                    </li>
+                    </li>                    
+                    
                     <li class="nav-item" *appHasRole="['VIP']">
-                        <a routerLink="/visitors" routerLinkActive="active" class="nav-link">
+                        <a routerLink="/visits" routerLinkActive="active" class="nav-link">
                             <i class="fa fa-eye me-1"></i>My Visitors
                         </a>
                     </li>
