--- a/Client/src/app/visits/visit-card/visit-card.component.html
+++ b/Client/src/app/visits/visit-card/visit-card.component.html
@@ -3,12 +3,12 @@
         <img [src]="visit?.visitorPhotoUrl || 'user.png'" alt="{{ visit?.visitorKnownAs }}" class="card-img-top" />
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
-                <button 
+                <!-- <button 
                     [routerLink]="['/members', visit?.visitorId]" 
                     (click)="visitMember()"
                     class="btn btn-primary">
                     <i class="fa fa-user"></i>
-                </button>
+                </button> -->
             </li>
             <li class="list-inline-item">
                 <span class="badge bg-{{ isVisitor ? 'success' : 'info' }} px-2 py-1">
