--- a/Client/src/app/members/member-card/member-card.component.html
+++ b/Client/src/app/members/member-card/member-card.component.html
@@ -1,37 +1,57 @@
-<div class="card mb-4">
-    <div class="card-img-wrapper">
+<div class="card mb-4 border-0 member-card">
+    <div class="card-img-wrapper position-relative overflow-hidden">
         <img [src]="member().photoUrl || 'user.png'" alt="{{ member().knownAs }}" class="card-img-top" />
-        <ul class="list-inline member-icons animate text-center">
-            <li class="list-inline-item">
-                <button 
-                    routerLink="/members/{{member().username}}" 
-                    (click)="visitMember()"
-                    class="btn btn-primary">
-                    <i class="fa fa-user"></i>
-                </button>
-            </li>
-            <li class="list-inline-item">
-                <button (click)="toggleLike()" class="btn btn-primary"><i class="fa fa-heart"></i></button>
-            </li>
-            <li class="list-inline-item">
-                <button  
-                    routerLink="/members/{{member().username}}"
-                    [queryParams]="{tab: 'Messages'}"
-                    class="btn btn-primary">
-                    <i class="fa fa-envelope"></i></button>
-            </li>
-        </ul>
-    </div>
-    <div class="card-body p-1">
-        <h6 class="card-title text-center mb-1">
-            <span [class.is-online] = "isOnline()" >
-                <i class="fa fa-user me-2"></i>
+        <div class="member-overlay">
+            <ul class="member-icons animate text-center m-0 p-0">
+                <li class="d-inline-block m-1">
+                    <button 
+                        routerLink="/members/{{member().username}}" 
+                        (click)="visitMember()"
+                        class="btn btn-sm btn-icon">
+                        <i class="fa fa-user"></i>
+                    </button>
+                </li>
+                <li class="d-inline-block m-1">
+                    <button (click)="toggleLike()" class="btn btn-sm btn-icon" [ngClass]="{'liked': hasLiked()}">
+                        <i class="fa fa-heart"></i>
+                    </button>
+                </li>
+                <li class="d-inline-block m-1">
+                    <button  
+                        routerLink="/members/{{member().username}}"
+                        [queryParams]="{tab: 'Messages'}"
+                        class="btn btn-sm btn-icon">
+                        <i class="fa fa-envelope"></i>
+                    </button>
+                </li>
+            </ul>
+        </div>
+        
+        @if (isOnline()) {
+            <span class="online-indicator" title="Online now">
+                <span class="online-dot"></span>
             </span>
-            {{ member().knownAs }},{{member().age}}
+        }
+        
+        @if (member().hasRoles?.includes('VIP')) {
+            <span class="vip-badge">
+                <i class="fa fa-crown"></i>
+            </span>
+        }
+    </div>
+    <div class="card-body p-3">
+        <h5 class="card-title mb-1">
+            {{ member().knownAs }}
+            <span class="age">{{member().age}}</span>
             @if (hasLiked()) {
-                <i class="fa fa-heart ms-2" style="color: red"></i>
+                <i class="fa fa-heart ms-2 liked-heart"></i>
             }
-        </h6>
-        <p class="card-text text-muted text-center">{{ member().city }}</p>
+        </h5>
+        <p class="card-text mb-2">
+            <i class="fa fa-map-marker me-1"></i> {{ member().city }}
+        </p>
+        <p class="card-text small text-truncate interests">
+            <i class="fa fa-heart-o me-1"></i> {{ member().interests || 'Exploring new connections' }}
+        </p>
     </div>
 </div>
