--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: var(--primary-color); box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
     <div class="container">
-        <a class="navbar-brand fw-bold" routerLink="/"><i class="fa fa-heart me-2"></i>Dating App</a>
+        <a class="navbar-brand fw-bold" routerLink="/"><i class="fa fa-heart me-2"></i>Spark</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
